# distill

./: .gitignore  README.md  docker_official_images.csv  docker_official_images.py  go.mod  go.sum  summary.md
.github/workflows/: ci.yml
cmd/distill/: analyse.go  analyse_test.go  classify.go  classify_test.go  corpus.go  corpus_test.go  extract.go  extract_test.go  gather.go  gather_test.go  gen-vocab.rb  main.go  schema.json  terms.txt  vocab.txt
corpus/: examples.txt  gen-seed.rb  gen-top-deps.rb  knowledge.txt  seed.txt  top-deps.txt
data/: embed.go
tools/gencorpus/: main.go
tools/genvocab/: main.go
train/: .gitignore  README.md  dataset.py  evaluate.py  model.py  pyproject.toml  test_dataset.py  train.py
