[project]
name = "distill-train"
version = "0.0.0"
description = "Training and evaluation for the distill oss-taxonomy classifier"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "transformers>=4.52",
    "scikit-learn>=1.7",
    "numpy>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
